--- a/templates/Web/layout.html.twig
+++ b/templates/Web/layout.html.twig
@@ -160,6 +160,8 @@
 <!-- Bootstrap core JavaScript -->
 
 {{ encore_entry_script_tags('js/web') }}
+{% block javascripts %}
+{% endblock javascripts %}
 </body>
 
 </html>
