--- a/templates/Web/layout.html.twig
+++ b/templates/Web/layout.html.twig
@@ -76,6 +76,18 @@
     {% block stylesheets %}
     {% endblock stylesheets %}
     <script src="https://kit.fontawesome.com/b4616f2534.js"></script>
+
+    {% if app.environment != 'dev' %}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144594770-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-144594770-1');
+        </script>
+    {% endif %}
 </head>
 
 <body>
