se agrega caption a comercios adheridos

--- a/templates/Web/comercios.html.twig
+++ b/templates/Web/comercios.html.twig
@@ -52,6 +52,9 @@
 
                 <div class="col-md-12 p-5">
                     <h2 class="display-4">Comercios</h2>
+                    <p>
+                        Comercios SOCIOS de la Cámara de Comercio e Industria de Posadas que se adhirieron al evento:
+                    </p>
                     <div class="row">
                         <div class="col-md-12">
                             {{ form_start(form) }}
